# klaus_of_death_rustacean

./: Cargo.toml  README.md  build_install.rs  build_local.rs
resources/: config.toml  default.map
resources/map/: default.map  textures.txt
resources/shaders/: main.wgsl  ray_calc.wgsl  render.wgsl
src/: app.rs  device.rs  main.rs  networking.rs
src/core/: ecs.rs  game_state.rs  mod.rs  resources.rs  scheduler.rs
src/render/: device.rs  map.rs  mod.rs  textures_loader.rs
src/utils/: input.rs  mod.rs  player.rs  transform.rs
